tests/sksl/errors/ForInitStmt.glsl
### Compilation failed:

error: 1: expected expression, but found 'for'
void test_init_stmt_for()       { for (for(;;);; )              {} }
                                       ^^^
1 error
